--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFw4IJX2APZ4vyZSxNkt9r",
+      "authorship_tag": "ABX9TyMryRsJPaMeEdNotyNjp8/w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "id": "kQw3odRK7WXe",
         "outputId": "77e8a0f9-148c-4597-d82b-2bd41c19d5ff"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "id": "vfSJypJBOkA3",
         "outputId": "ebdfad13-f008-4a35-a0c7-9831db7dcb3c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,13 +129,64 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Day 3\n",
+        "### The count-and-say sequence is a sequence of digit strings defined by the recursive formula:\n",
+        "\n",
+        "countAndSay(1) = \"1\"\n",
+        "countAndSay(n) is the run-length encoding of countAndSay(n - 1).\n",
+        "Run-length encoding (RLE) is a string compression method that works by replacing consecutive identical characters (repeated 2 or more times) with the concatenation of the character and the number marking the count of the characters (length of the run). For example, to compress the string \"3322251\" we replace \"33\" with \"23\", replace \"222\" with \"32\", replace \"5\" with \"15\" and replace \"1\" with \"11\". Thus the compressed string becomes \"23321511\".\n",
+        "\n",
+        "Given a positive integer n, return the nth element of the count-and-say sequence."
+      ],
       "metadata": {
-        "id": "YBVrFQKXXAjI"
+        "id": "fCaL9nSFGLrT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 3\n",
+        "class Solution(object):\n",
+        "    def countAndSay(self, n):\n",
+        "        if n == 1:\n",
+        "            return \"1\"\n",
+        "        prev = \"1\"\n",
+        "        for i in range(2, n + 1):\n",
+        "            result = \"\"\n",
+        "            count = 1\n",
+        "            for j in range(1, len(prev)):\n",
+        "                if prev[j] == prev[j - 1]:\n",
+        "                    count += 1\n",
+        "                else:\n",
+        "                    result += str(count) + prev[j - 1]\n",
+        "                    count = 1\n",
+        "            result += str(count) + prev[-1]  # Add the last group\n",
+        "            prev = result\n",
+        "        return prev\n",
+        "n=int(input(\"Enter a number: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.countAndSay(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m9grEvA77dMQ",
+        "outputId": "ddb73c2a-ea18-4267-9cc3-2afaf9f21f7d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "111221\n"
+          ]
+        }
+      ]
     }
   ]
 }
