--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMryRsJPaMeEdNotyNjp8/w",
+      "authorship_tag": "ABX9TyMCkkW97THfNx1X2/3VFYnJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
         "                else:\n",
         "                    result += str(count) + prev[j - 1]\n",
         "                    count = 1\n",
-        "            result += str(count) + prev[-1]  # Add the last group\n",
+        "            result += str(count) + prev[-1]\n",
         "            prev = result\n",
         "        return prev\n",
         "n=int(input(\"Enter a number: \"))\n",
@@ -174,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m9grEvA77dMQ",
-        "outputId": "ddb73c2a-ea18-4267-9cc3-2afaf9f21f7d"
+        "outputId": "5439507b-180a-480e-b6d8-5818e980a561"
       },
-      "execution_count": 48,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,6 +184,65 @@
           "text": [
             "Enter a number: 5\n",
             "111221\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 4\n",
+        "### Count Subarrays with Fixed Bounds\n",
+        "You are given an integer array nums and two integers minK and maxK.\n",
+        "\n",
+        "A fixed-bound subarray of nums is a subarray that satisfies the following conditions:\n",
+        "\n",
+        "The minimum value in the subarray is equal to minK.\n",
+        "The maximum value in the subarray is equal to maxK.\n",
+        "Return the number of fixed-bound subarrays.\n",
+        "\n",
+        "A subarray is a contiguous part of an array."
+      ],
+      "metadata": {
+        "id": "WN-wjLbL4d7D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 4\n",
+        "class Solution(object):\n",
+        "  def countSubarrays(self, nums, minK, maxK):\n",
+        "    count=0\n",
+        "    for i in range(len(nums)):\n",
+        "      for j in range(i,len(nums)):\n",
+        "        l=nums[i:j+1]\n",
+        "        if min(l)==minK and max(l)==maxK:\n",
+        "          count=count+1\n",
+        "    return count\n",
+        "nums=list(map(int,input(\"Enter a number: \").split()))\n",
+        "minK=int(input(\"enter any value from list:\"))\n",
+        "maxK=int(input(\"enter any value from list:\"))\n",
+        "solution=Solution()\n",
+        "print(solution.countSubarrays(nums,minK,maxK))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7oHFosBmtITw",
+        "outputId": "ef2127a4-0f81-4418-a961-13cff4b5aa4e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1 3 5 2 7 5\n",
+            "enter any value from list:1\n",
+            "enter any value from list:5\n",
+            "2\n"
           ]
         }
       ]
