--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCkkW97THfNx1X2/3VFYnJ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMsYfvdn+NQKxqIfDKwL/eW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,7 +177,7 @@
         "id": "m9grEvA77dMQ",
         "outputId": "5439507b-180a-480e-b6d8-5818e980a561"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +221,7 @@
         "        if min(l)==minK and max(l)==maxK:\n",
         "          count=count+1\n",
         "    return count\n",
-        "nums=list(map(int,input(\"Enter a number: \").split()))\n",
+        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
         "minK=int(input(\"enter any value from list:\"))\n",
         "maxK=int(input(\"enter any value from list:\"))\n",
         "solution=Solution()\n",
@@ -231,18 +232,130 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7oHFosBmtITw",
-        "outputId": "ef2127a4-0f81-4418-a961-13cff4b5aa4e"
+        "outputId": "e144a68a-40ff-4897-97c3-ae0fdf9ba573"
       },
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number: 1 3 5 2 7 5\n",
+            "Enter a list: 1 3 5 2 7 5\n",
             "enter any value from list:1\n",
             "enter any value from list:5\n",
             "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 5\n",
+        "### Two Sum\n",
+        "Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
+        "\n",
+        "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+        "\n",
+        "You can return the answer in any order."
+      ],
+      "metadata": {
+        "id": "CuzxIURqeAb-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 5\n",
+        "class Solution(object):\n",
+        "    def twoSum(self, nums, target):\n",
+        "        result=[]\n",
+        "        for i in range(len(nums)):\n",
+        "            for j in range(i+1,len(nums)):\n",
+        "                if nums[i]+nums[j]==target:\n",
+        "                    result.append(i)\n",
+        "                    result.append(j)\n",
+        "                    break\n",
+        "        return result\n",
+        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
+        "target = int(input(\"Enter a target sum: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.twoSum(nums,target))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6v8JDTPcd_qY",
+        "outputId": "055e90f8-c517-448e-eb43-dc7a0cb9d6ca"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list: 2 7 11 8\n",
+            "Enter a target sum: 9\n",
+            "[0, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 6\n",
+        "### Valid Parentheses\n",
+        "Given a string s containing just the characters '(', ')', '{', '}', '[' and ']', determine if the input string is valid.\n",
+        "\n",
+        "An input string is valid if:\n",
+        "\n",
+        "Open brackets must be closed by the same type of brackets.\n",
+        "Open brackets must be closed in the correct order.\n",
+        "Every close bracket has a corresponding open bracket of the same type."
+      ],
+      "metadata": {
+        "id": "A2pPNazl121Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 6\n",
+        "class Solution(object):\n",
+        "    def isValid(self, s):\n",
+        "        l = []\n",
+        "        bracket_map = {')': '(', '}': '{', ']': '['}\n",
+        "        for char in s:\n",
+        "            if char in bracket_map.values():\n",
+        "                l.append(char)\n",
+        "            elif char in bracket_map:\n",
+        "                if not l or l[-1] != bracket_map[char]:\n",
+        "                    return False\n",
+        "                l.pop()\n",
+        "            else:\n",
+        "                return False\n",
+        "        return not l\n",
+        "s=list(input(\"enter a list: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.isValid(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ea5ULMnzrNL",
+        "outputId": "0c117ece-b306-488f-951f-277a227611e1"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a list: {}[]()\n",
+            "True\n"
           ]
         }
       ]
