--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsYfvdn+NQKxqIfDKwL/eW",
+      "authorship_tag": "ABX9TyNP+SxuJ3BFf6MxVK/R5LRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,7 +234,7 @@
         "id": "7oHFosBmtITw",
         "outputId": "e144a68a-40ff-4897-97c3-ae0fdf9ba573"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
         "id": "6v8JDTPcd_qY",
         "outputId": "055e90f8-c517-448e-eb43-dc7a0cb9d6ca"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "id": "8ea5ULMnzrNL",
         "outputId": "0c117ece-b306-488f-951f-277a227611e1"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,6 +356,113 @@
           "text": [
             "enter a list: {}[]()\n",
             "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 7\n",
+        "### Build Array from Permutation\n",
+        "Given a zero-based permutation nums (0-indexed), build an array ans of the same length where ans[i] = nums[nums[i]] for each 0 <= i < nums.length and return it.\n",
+        "\n",
+        "A zero-based permutation nums is an array of distinct integers from 0 to nums.length - 1 (inclusive).\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "1 <= nums.length <= 1000\n",
+        "0 <= nums[i] < nums.length\n",
+        "The elements in nums are distinct."
+      ],
+      "metadata": {
+        "id": "pRXu7s4jY_Ip"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 7\n",
+        "class Solution(object):\n",
+        "    def buildArray(self, nums):\n",
+        "        ans=[]\n",
+        "        for i in range(len(nums)):\n",
+        "            ans.append(nums[nums[i]])\n",
+        "        return ans\n",
+        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.buildArray(nums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kd2t7gr6Yrum",
+        "outputId": "faded0bd-928b-4dea-8e21-ca2d68292057"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list: 0 2 1 5 3 4\n",
+            "[0, 1, 2, 4, 5, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 8\n",
+        "### Reverse Integer\n",
+        "\n",
+        "Given a signed 32-bit integer x, return x with its digits reversed. If reversing x causes the value to go outside the signed 32-bit integer range [-2^31, (2^31) - 1], then return 0.\n",
+        "\n",
+        "Assume the environment does not allow you to store 64-bit integers (signed or unsigned).\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "-231 <= x <= 231 - 1"
+      ],
+      "metadata": {
+        "id": "5IL3POJ9eLq2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 8\n",
+        "class Solution(object):\n",
+        "    def reverse(self, x):\n",
+        "        s=str(x)\n",
+        "        if x>=0:\n",
+        "            result=int(s[::-1])\n",
+        "        else:\n",
+        "            result=-int(s[::-1][:-1])\n",
+        "        if result < -2**31 or result > 2**31 - 1:\n",
+        "            return 0\n",
+        "        return result\n",
+        "x=int(input(\"Enter a number: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.reverse(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YNFAXobAaRBs",
+        "outputId": "e9029afc-d7f7-4e99-fc79-204fe9092721"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: -1234\n",
+            "-4321\n"
           ]
         }
       ]
