--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM1YMGlGKtc3jXTni07OpJi",
+      "authorship_tag": "ABX9TyOhjxTkQF3vmhO/Cy7fPRSj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,7 +522,7 @@
         "id": "myiiZeIfxn6V",
         "outputId": "8e68ed34-a628-49ca-fb2b-0488483ef574"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,6 +530,77 @@
           "text": [
             "Enter a number: 12345\n",
             "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 10\n",
+        "### Minimum Equal Sum of Two Arrays After Replacing Zeros\n",
+        "\n",
+        "You are given two arrays nums1 and nums2 consisting of positive integers.\n",
+        "\n",
+        "You have to replace all the 0's in both arrays with strictly positive integers such that the sum of elements of both arrays becomes equal.\n",
+        "\n",
+        "Return the minimum equal sum you can obtain, or -1 if it is impossible."
+      ],
+      "metadata": {
+        "id": "1-zrpWipVU0c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 10\n",
+        "class Solution(object):\n",
+        "    def minSum(self, nums1, nums2):\n",
+        "        s1=sum(nums1)\n",
+        "        s2=sum(nums2)\n",
+        "        c1=nums1.count(0)\n",
+        "        c2=nums2.count(0)\n",
+        "        if s1>s2:\n",
+        "            minsum=s1+c1\n",
+        "            if 0 in nums1 and 0 in nums2 and s2+c2>minsum:\n",
+        "                minsum = s2+c2\n",
+        "            if (minsum-s2<c2) or (c2==0):\n",
+        "                minsum=-1\n",
+        "        if s2>s1:\n",
+        "            minsum=s2+c2\n",
+        "            if 0 in nums1 and 0 in nums2 and s1+c1>minsum:\n",
+        "                minsum = s1+c1\n",
+        "            if (minsum-s1<c1) or (c1==0):\n",
+        "                minsum = -1\n",
+        "        if s1==s2:\n",
+        "            if 0 in nums1 and 0 in nums2:\n",
+        "                minsum=s1+(max(c1,c2))\n",
+        "            elif (0 not in nums1 and 0 in nums2) or ( 0 in nums1 and 0 not in nums2):\n",
+        "                minsum = -1\n",
+        "            else:\n",
+        "                minsum=s1\n",
+        "        return minsum\n",
+        "n1=list(map(int,input(\"Enter list 1: \").split(',')))\n",
+        "n2=list(map(int,input(\"Enter list 2: \").split(',')))\n",
+        "solution=Solution()\n",
+        "print(solution.minSum(n1,n2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "en-sK8hxCN7l",
+        "outputId": "859b8db4-4f71-4558-d733-30458ec8e700"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter list 1: 20,0,18,11,0,0,0,0,0,0,17,28,0,11,10,0,0,15,29\n",
+            "Enter list 2: 16,9,25,16,1,9,20,28,8,0,1,0,1,27\n",
+            "169\n"
           ]
         }
       ]
