--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhjxTkQF3vmhO/Cy7fPRSj",
+      "authorship_tag": "ABX9TyNwB/MHcvEK6PNsSZ101bj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Day 1 challenge\n",
+        "## Day 1\n",
         "### Longest Substring Without Repeating Characters"
       ],
       "metadata": {
@@ -83,7 +83,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Day 2 Challenge\n",
+        "## Day 2\n",
         "### Count Equal and Divisible pairs in an array\n",
         "Given a 0-indexed integer array nums of length n and an integer k, return the number of pairs (i, j) where 0 <= i < j < n, such that nums[i]==nums[j] and (i*j) is divisible by k."
       ],
@@ -589,10 +589,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "en-sK8hxCN7l",
-        "outputId": "0b013663-293c-40fa-c903-749ff40e31e2"
+        "id": "QVzZb9DgpOEX",
+        "outputId": "d6ce5f5c-4104-4170-903e-59e438146847"
       },
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,6 +601,29 @@
             "Enter list 1: 20,0,18,11,0,0,0,0,0,0,17,28,0,11,10,0,0,15,29\n",
             "Enter list 2: 16,9,25,16,1,9,20,28,8,0,1,0,1,27\n",
             "169\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('hello world')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qNpBeXe0pphz",
+        "outputId": "d694c8f4-1ce2-42ed-e351-9b49a20b78d2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
           ]
         }
       ]
