--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO7lP1upV3c92jBzLwzyvFL",
+      "authorship_tag": "ABX9TyM3D/aJMUjX+VOddPV6X/0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -592,7 +592,7 @@
         "id": "RPdd6AJJqHmC",
         "outputId": "4b47ea51-f852-4540-b80f-050fb1578d87"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,6 +601,98 @@
             "Enter list1: 20,0,18,11,0,0,0,0,0,0,17,28,0,11,10,0,0,15,29\n",
             "Enter list2: 16,9,25,16,1,9,20,28,8,0,1,0,1,27\n",
             "169\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ord('a'))\n",
+        "print(chr(97))\n",
+        "l2=[]\n",
+        "j='a'\n",
+        "l2.append(chr(ord(j)+1))\n",
+        "print(l2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uJI9BKG7WwqC",
+        "outputId": "8121214d-45b8-42a4-c486-bb47c9c652d9"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "97\n",
+            "a\n",
+            "['b']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 11\n",
+        "### Total Characters in String After Transformations\n",
+        "You are given a string s and an integer t, representing the number of transformations to perform. In one transformation, every character in s is replaced according to the following rules:\n",
+        "\n",
+        "If the character is 'z', replace it with the string \"ab\".\n",
+        "Otherwise, replace it with the next character in the alphabet. For example, 'a' is replaced with 'b', 'b' is replaced with 'c', and so on.\n",
+        "Return the length of the resulting string after exactly t transformations.\n",
+        "\n",
+        "Since the answer may be very large, return it modulo 109 + 7."
+      ],
+      "metadata": {
+        "id": "SGxGJpG7i0bR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 11\n",
+        "from collections import Counter\n",
+        "mod=10**9+7\n",
+        "class Solution(object):\n",
+        "    def lengthAfterTransformations(self, s, t):\n",
+        "        count=Counter(s)\n",
+        "        for i in range(t):\n",
+        "            new_count=Counter()\n",
+        "            for j in count:\n",
+        "                if j == 'z':\n",
+        "                    new_count['a']=(new_count['a']+count[j])%mod\n",
+        "                    new_count['b']=(new_count['b']+count[j])%mod\n",
+        "                else:\n",
+        "                    next_char=chr(ord(j)+1)\n",
+        "                    new_count[next_char]=(new_count[next_char]+count[j])%mod\n",
+        "            count = new_count\n",
+        "        return sum(count.values())%mod\n",
+        "s=input(\"Enter a string: \")\n",
+        "t=int(input(\"Enter a number: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.lengthAfterTransformations(s,t))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GuNjTXaKZQix",
+        "outputId": "fe8ea923-70b4-4b35-e9bb-ee03e86baada"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: abcyy\n",
+            "Enter a number: 2\n",
+            "7\n"
           ]
         }
       ]
