--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3D/aJMUjX+VOddPV6X/0y",
+      "authorship_tag": "ABX9TyPlTQeSy4dnH6AKdIPsS9Kg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -693,6 +693,56 @@
             "Enter a string: abcyy\n",
             "Enter a number: 2\n",
             "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 12\n",
+        "### Longest Common Prefix\n",
+        "Write a function to find the longest common prefix string amongst an array of strings.\n",
+        "\n",
+        "If there is no common prefix, return an empty string \"\"."
+      ],
+      "metadata": {
+        "id": "a-XoRzFgN9ZL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 12\n",
+        "class Solution(object):\n",
+        "    def longestCommonPrefix(self, strs):\n",
+        "        if len(strs)==0:\n",
+        "            return \"\"\n",
+        "        for i in range(len(strs[0])):\n",
+        "            c = strs[0][i]\n",
+        "            for j in range(1,len(strs)):\n",
+        "                if i == len(strs[j]) or strs[j][i]!=c:\n",
+        "                    return strs[0][0:i]\n",
+        "        return strs[0]\n",
+        "strs=list(input(\"Enter a list of strings: \").split())\n",
+        "solution=Solution()\n",
+        "print(solution.longestCommonPrefix(strs))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "thZSf8YBlI48",
+        "outputId": "8d881cf8-28f4-4df4-9d9b-8f2193759218"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list of strings: flower flow flight\n",
+            "fl\n"
           ]
         }
       ]
