--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0PLtyy8aseWbLE8FskkZy",
+      "authorship_tag": "ABX9TyN9TUh5T9XNhP4S++Qwtcq7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -654,7 +654,7 @@
         "id": "GuNjTXaKZQix",
         "outputId": "fe8ea923-70b4-4b35-e9bb-ee03e86baada"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "id": "thZSf8YBlI48",
         "outputId": "8d881cf8-28f4-4df4-9d9b-8f2193759218"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,6 +713,67 @@
           "text": [
             "Enter a list of strings: flower flow flight\n",
             "fl\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 13\n",
+        "### Longest Unequal Adjacent Groups Subsequence\n",
+        "\n",
+        "You are given a string array words and a binary array groups both of length n, where words[i] is associated with groups[i].\n",
+        "\n",
+        "Your task is to select the longest alternating subsequence from words. A subsequence of words is alternating if for any two consecutive strings in the sequence, their corresponding elements in the binary array groups differ. Essentially, you are to choose strings such that adjacent elements have non-matching corresponding bits in the groups array.\n",
+        "\n",
+        "Formally, you need to find the longest subsequence of an array of indices [0, 1, ..., n - 1] denoted as [i0, i1, ..., ik-1], such that groups[ij] != groups[ij+1] for each 0 <= j < k - 1 and then find the words corresponding to these indices.\n",
+        "\n",
+        "Return the selected subsequence. If there are multiple answers, return any of them.\n",
+        "\n",
+        "Note: The elements in words are distinct."
+      ],
+      "metadata": {
+        "id": "ezQNJG_DfRJ7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 13\n",
+        "class Solution(object):\n",
+        "    def getLongestSubsequence(self, words, groups):\n",
+        "        l=[]\n",
+        "        if len(words)<=1:\n",
+        "            return words\n",
+        "        else:\n",
+        "            subsequence=[0]\n",
+        "            for i in range(1,len(words)):\n",
+        "                if groups[i] != groups[subsequence[-1]]:\n",
+        "                    subsequence.append(i)\n",
+        "            result = [words[i] for i in subsequence]\n",
+        "            return result\n",
+        "words=list(input(\"Enter a List: \").split())\n",
+        "groups=list(map(int, input(\"Enter binary list of same length: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.getLongestSubsequence(words,groups))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "38AoYxArOxL4",
+        "outputId": "a2d0e549-1d47-40dd-f372-20cd50fb515c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a List: a b c d\n",
+            "Enter binary list of same length: 1 0 1 1\n",
+            "['a', 'b', 'c']\n"
           ]
         }
       ]
