--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9TUh5T9XNhP4S++Qwtcq7",
+      "authorship_tag": "ABX9TyMARmJZ/7mPgv70GdbRfPE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -743,7 +743,6 @@
         "# Day 13\n",
         "class Solution(object):\n",
         "    def getLongestSubsequence(self, words, groups):\n",
-        "        l=[]\n",
         "        if len(words)<=1:\n",
         "            return words\n",
         "        else:\n",
@@ -763,9 +762,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "38AoYxArOxL4",
-        "outputId": "a2d0e549-1d47-40dd-f372-20cd50fb515c"
+        "outputId": "2a9d788d-3290-495f-b3b9-7fe117c5ebe5"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -774,6 +773,75 @@
             "Enter a List: a b c d\n",
             "Enter binary list of same length: 1 0 1 1\n",
             "['a', 'b', 'c']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 14\n",
+        "### String to Integer (atoi)\n",
+        "Implement the myAtoi(string s) function, which converts a string to a 32-bit signed integer.\n",
+        "\n",
+        "The algorithm for myAtoi(string s) is as follows:\n",
+        "\n",
+        "1. Whitespace: Ignore any leading whitespace (\" \").\n",
+        "2. Signedness: Determine the sign by checking if the next character is '-' or '+', assuming positivity if neither present.\n",
+        "3. Conversion: Read the integer by skipping leading zeros until a non-digit character is encountered or the end of the string is reached. If no digits were read, then the result is 0.\n",
+        "4. Rounding: If the integer is out of the 32-bit signed integer range [-231, 231 - 1], then round the integer to remain in the range. Specifically, integers less than -231 should be rounded to -231, and integers greater than 231 - 1 should be rounded to 231 - 1.\n",
+        "\n",
+        "Return the integer as the final result."
+      ],
+      "metadata": {
+        "id": "9iW6vEcsyZdB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 14\n",
+        "class Solution(object):\n",
+        "    def myAtoi(self, s):\n",
+        "        s = s.strip()\n",
+        "        if not s:\n",
+        "            return 0\n",
+        "        sign = 1\n",
+        "        i = 0\n",
+        "        if i < len(s) and (s[i] == '-' or s[i] == '+'):\n",
+        "            if s[i] == '-':\n",
+        "                sign = -1\n",
+        "            i += 1\n",
+        "        result = 0\n",
+        "        while i < len(s) and s[i].isdigit():\n",
+        "            result = result * 10 + int(s[i])\n",
+        "            i += 1\n",
+        "        result *= sign\n",
+        "        int_min, int_max = -2**31, 2**31 - 1\n",
+        "        if result < int_min:\n",
+        "            return int_min\n",
+        "        if result > int_max:\n",
+        "            return int_max\n",
+        "        return result\n",
+        "s=input(\"Enter any integer: \")\n",
+        "solution=Solution()\n",
+        "print(solution.myAtoi(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XidjBPkAoDog",
+        "outputId": "58fe6fd2-122a-47a4-b134-0de798171984"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any integer: 1337c0d3\n",
+            "1337\n"
           ]
         }
       ]
