--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMARmJZ/7mPgv70GdbRfPE7",
+      "authorship_tag": "ABX9TyOZOq9HxehbxhBr7mZHNoEz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -764,7 +764,7 @@
         "id": "38AoYxArOxL4",
         "outputId": "2a9d788d-3290-495f-b3b9-7fe117c5ebe5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +834,7 @@
         "id": "XidjBPkAoDog",
         "outputId": "58fe6fd2-122a-47a4-b134-0de798171984"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,6 +842,56 @@
           "text": [
             "Enter any integer: 1337c0d3\n",
             "1337\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 15\n",
+        "### Sort Colors\n",
+        "Given an array nums with n objects colored red, white, or blue, sort them so that objects of the same color are adjacent, with the colors in the order red, white, and blue.\n",
+        "\n",
+        "We will use the integers 0, 1, and 2 to represent the color red, white, and blue, respectively.\n",
+        "\n",
+        "You must solve this problem without using the library's sort function."
+      ],
+      "metadata": {
+        "id": "8BBHHnnkypJy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 15\n",
+        "class Solution(object):\n",
+        "    def sortColors(self, nums):\n",
+        "        s=set(nums)\n",
+        "        result=[]\n",
+        "        for i in s:\n",
+        "            for j in range(nums.count(i)):\n",
+        "                result.append(i)\n",
+        "        return result\n",
+        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.sortColors(nums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9FFh6TBpwavC",
+        "outputId": "031217a7-ea6f-4aef-8a16-5bbd3a4f40be"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list: 2 0 2 1 1 0\n",
+            "[0, 0, 1, 1, 2, 2]\n"
           ]
         }
       ]
