--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZOq9HxehbxhBr7mZHNoEz",
+      "authorship_tag": "ABX9TyMiY8kyDARms5WK0qWdab0o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -884,7 +884,7 @@
         "id": "9FFh6TBpwavC",
         "outputId": "031217a7-ea6f-4aef-8a16-5bbd3a4f40be"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,6 +892,61 @@
           "text": [
             "Enter a list: 2 0 2 1 1 0\n",
             "[0, 0, 1, 1, 2, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 16\n",
+        "### Remove Duplicates from Sorted Array\n",
+        "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
+        "\n",
+        "Consider the number of unique elements of nums to be k, to get accepted, you need to do the following things:\n",
+        "\n",
+        "Change the array nums such that the first k elements of nums contain the unique elements in the order they were present in nums initially. The remaining elements of nums are not important as well as the size of nums.\n",
+        "Return k."
+      ],
+      "metadata": {
+        "id": "ZWAp2cbf99uE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 16\n",
+        "class Solution(object):\n",
+        "    def removeDuplicates(self, nums):\n",
+        "        if not nums:\n",
+        "            return 0\n",
+        "\n",
+        "        k = 1  # pointer for next unique position\n",
+        "        for i in range(1, len(nums)):\n",
+        "            if nums[i] != nums[i - 1]:\n",
+        "                nums[k] = nums[i]\n",
+        "                k += 1\n",
+        "\n",
+        "        return k\n",
+        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.removeDuplicates(nums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pp6ADdc634Jb",
+        "outputId": "3558b48b-6ff5-4335-a4cd-ead87116dc9c"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list: 0 0 1 1 1 2 2 3 3 4\n",
+            "5\n"
           ]
         }
       ]
