--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMiY8kyDARms5WK0qWdab0o",
+      "authorship_tag": "ABX9TyO83X84ux8Dd+Pxq7W+6F93",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -939,7 +939,7 @@
         "id": "pp6ADdc634Jb",
         "outputId": "3558b48b-6ff5-4335-a4cd-ead87116dc9c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,6 +947,50 @@
           "text": [
             "Enter a list: 0 0 1 1 1 2 2 3 3 4\n",
             "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 17\n",
+        "### Length of Last Word\n",
+        "Given a string s consisting of words and spaces, return the length of the last word in the string.\n",
+        "\n",
+        "A word is a maximal substring consisting of non-space characters only."
+      ],
+      "metadata": {
+        "id": "fSF62oAYJ_qS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 17\n",
+        "class Solution(object):\n",
+        "    def lengthOfLastWord(self, s):\n",
+        "        s1=list((s.strip()).split())\n",
+        "        return len(s1[-1])\n",
+        "s=input(\"Enter a string: \")\n",
+        "solution=Solution()\n",
+        "print(solution.lengthOfLastWord(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j9qrNFEAIuGa",
+        "outputId": "e07628cf-8cc5-42e9-d65e-f35fd57e557c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string:     fly me   to   the moon  \n",
+            "4\n"
           ]
         }
       ]
