--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO83X84ux8Dd+Pxq7W+6F93",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -983,7 +982,7 @@
         "id": "j9qrNFEAIuGa",
         "outputId": "e07628cf-8cc5-42e9-d65e-f35fd57e557c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,6 +993,70 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 18\n",
+        "### Number of Smooth Descent Periods of a Stock\n",
+        "\n",
+        "You are given an integer array prices representing the daily price history of a stock, where prices[i] is the stock price on the ith day.\n",
+        "\n",
+        "A smooth descent period of a stock consists of one or more contiguous days such that the price on each day is lower than the price on the preceding day by exactly 1. The first day of the period is exempted from this rule.\n",
+        "\n",
+        "Return the number of smooth descent periods."
+      ],
+      "metadata": {
+        "id": "wvFignwBg2dp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 18\n",
+        "class Solution(object):\n",
+        "    def getDescentPeriods(self, prices):\n",
+        "        n=len(prices)\n",
+        "        sdp=1\n",
+        "        curr_len=1\n",
+        "        for i in range(1,n):\n",
+        "            if prices[i-1] - prices[i] == 1:\n",
+        "                curr_len += 1\n",
+        "            else:\n",
+        "                curr_len = 1\n",
+        "            sdp +=curr_len\n",
+        "        return sdp\n",
+        "prices = list(map(int,input(\"Enter a list of values: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.getDescentPeriods(prices))"
+      ],
+      "metadata": {
+        "id": "iobLKVt5gFvM",
+        "outputId": "6606c4b3-cacc-485f-ddcc-6d90405d9c7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list of values: 12 11 10 9 8 7 6 5 4 3 4 3 10 9 8 7\n",
+            "68\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "m2qNhYyogOZN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
