--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1050,13 +1049,54 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "##Day 19\n",
+        "###Median of Two Sorted Arrays\n",
+        "Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays."
+      ],
       "metadata": {
-        "id": "m2qNhYyogOZN"
+        "id": "cftcp2v_uoNM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 19\n",
+        "class Solution(object):\n",
+        "    def findMedianSortedArrays(self, nums1, nums2):\n",
+        "        l = nums1+nums2\n",
+        "        l.sort()\n",
+        "        n = len(l)\n",
+        "        if n%2 == 0:\n",
+        "            result  = (l[(n//2)-1] + l[n//2])/2.0\n",
+        "        else:\n",
+        "            result = l[n//2]\n",
+        "        return round(result, 5)\n",
+        "n1 = list(map(int,input(\"Enter list1: \").split()))\n",
+        "n2 = list(map(int,input(\"enter list2: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.findMedianSortedArrays(n1,n2))"
+      ],
+      "metadata": {
+        "id": "m2qNhYyogOZN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "963a9d2e-af9f-4aed-b261-4e1f705eefe9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter list1: 1 4 5\n",
+            "enter list2: 2 8 9\n",
+            "4.5\n"
+          ]
+        }
+      ]
     }
   ]
 }
