--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,16 +65,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kQw3odRK7WXe",
-        "outputId": "77e8a0f9-148c-4597-d82b-2bd41c19d5ff"
+        "outputId": "7f4a4f56-a057-447d-af2b-187514b40803"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a string: abcdadea\n",
-            "4\n"
+            "Enter a string: aljhfdj\n",
+            "6\n"
           ]
         }
       ]
@@ -848,56 +849,6 @@
       "cell_type": "markdown",
       "source": [
         "## Day 15\n",
-        "### Sort Colors\n",
-        "Given an array nums with n objects colored red, white, or blue, sort them so that objects of the same color are adjacent, with the colors in the order red, white, and blue.\n",
-        "\n",
-        "We will use the integers 0, 1, and 2 to represent the color red, white, and blue, respectively.\n",
-        "\n",
-        "You must solve this problem without using the library's sort function."
-      ],
-      "metadata": {
-        "id": "8BBHHnnkypJy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Day 15\n",
-        "class Solution(object):\n",
-        "    def sortColors(self, nums):\n",
-        "        s=set(nums)\n",
-        "        result=[]\n",
-        "        for i in s:\n",
-        "            for j in range(nums.count(i)):\n",
-        "                result.append(i)\n",
-        "        return result\n",
-        "nums=list(map(int,input(\"Enter a list: \").split()))\n",
-        "solution=Solution()\n",
-        "print(solution.sortColors(nums))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9FFh6TBpwavC",
-        "outputId": "031217a7-ea6f-4aef-8a16-5bbd3a4f40be"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a list: 2 0 2 1 1 0\n",
-            "[0, 0, 1, 1, 2, 2]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Day 16\n",
         "### Remove Duplicates from Sorted Array\n",
         "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. The relative order of the elements should be kept the same. Then return the number of unique elements in nums.\n",
         "\n",
@@ -913,7 +864,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Day 16\n",
+        "# Day 15\n",
         "class Solution(object):\n",
         "    def removeDuplicates(self, nums):\n",
         "        if not nums:\n",
@@ -952,7 +903,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Day 17\n",
+        "## Day 16\n",
         "### Length of Last Word\n",
         "Given a string s consisting of words and spaces, return the length of the last word in the string.\n",
         "\n",
@@ -965,7 +916,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Day 17\n",
+        "# Day 16\n",
         "class Solution(object):\n",
         "    def lengthOfLastWord(self, s):\n",
         "        s1=list((s.strip()).split())\n",
@@ -996,7 +947,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Day 18\n",
+        "## Day 17\n",
         "### Number of Smooth Descent Periods of a Stock\n",
         "\n",
         "You are given an integer array prices representing the daily price history of a stock, where prices[i] is the stock price on the ith day.\n",
@@ -1012,7 +963,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Day 18\n",
+        "#Day 17\n",
         "class Solution(object):\n",
         "    def getDescentPeriods(self, prices):\n",
         "        n=len(prices)\n",
@@ -1051,7 +1002,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Day 19\n",
+        "##Day 18\n",
         "###Median of Two Sorted Arrays\n",
         "Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays."
       ],
@@ -1062,7 +1013,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Day 19\n",
+        "#Day 18\n",
         "class Solution(object):\n",
         "    def findMedianSortedArrays(self, nums1, nums2):\n",
         "        l = nums1+nums2\n",
