--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1048,6 +1048,80 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Day 19\n",
+        "###Scramble String\n",
+        "We can scramble a string s to get a string t using the following algorithm:\n",
+        "\n",
+        "1. If the length of the string is 1, stop.\n",
+        "2. If the length of the string is > 1, do the following:\n",
+        "- Split the string into two non-empty substrings at a random index, i.e., if the string is s, divide it to x and y where s = x + y.\n",
+        "- Randomly decide to swap the two substrings or to keep them in the same order. i.e., after this step, s may become s = x + y or s = y + x.\n",
+        "- Apply step 1 recursively on each of the two substrings x and y.\n",
+        "\n",
+        "Given two strings s1 and s2 of the same length, return true if s2 is a scrambled string of s1, otherwise, return false."
+      ],
+      "metadata": {
+        "id": "2feg1uKCDWtt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 19\n",
+        "class Solution(object):\n",
+        "    def isScramble(self, s1, s2):\n",
+        "        memo={}\n",
+        "        def scramble_string(a,b):\n",
+        "            if (a,b) in memo:\n",
+        "                return memo[(a,b)]\n",
+        "            if a==b:\n",
+        "                memo[(a,b)] = True\n",
+        "                return True\n",
+        "            if sorted(a)!=sorted(b):\n",
+        "                memo[(a,b)] = False\n",
+        "                return False\n",
+        "            n=len(a)\n",
+        "            for i in range(1,n):\n",
+        "                if scramble_string(a[:i],b[:i]) and scramble_string(a[i:],b[i:]):\n",
+        "                    memo[(a,b)] = True\n",
+        "                    return True\n",
+        "                if scramble_string(a[:i],b[n-i:]) and scramble_string(a[i:],b[:n-i]):\n",
+        "                    memo[(a,b)] = True\n",
+        "                    return True\n",
+        "            memo[(a,b)] = False\n",
+        "            return False\n",
+        "        if len(s1)>1:\n",
+        "            return scramble_string(s1,s2)\n",
+        "        else:\n",
+        "            return s1==s2\n",
+        "s1=input(\"enter string1: \")\n",
+        "s2=input(\"enter string2: \")\n",
+        "solution=Solution()\n",
+        "print(solution.isScramble(s1,s2))"
+      ],
+      "metadata": {
+        "id": "1GRnSLunDL_Z",
+        "outputId": "ebf17dad-f5cd-4b11-e674-48db0731927b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter string1: abcde\n",
+            "enter string2: caebd\n",
+            "False\n"
+          ]
+        }
+      ]
     }
   ]
 }
