--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -67,7 +67,7 @@
         "id": "kQw3odRK7WXe",
         "outputId": "7f4a4f56-a057-447d-af2b-187514b40803"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1036,7 @@
         },
         "outputId": "963a9d2e-af9f-4aed-b261-4e1f705eefe9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,7 +1110,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,6 +1119,71 @@
             "enter string1: abcde\n",
             "enter string2: caebd\n",
             "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 20\n",
+        "### Integer to Roman\n",
+        "Seven different symbols represent Roman numerals with the following values:\n",
+        "\n",
+        "Symbol\tValue\n",
+        "I\t1\n",
+        "V\t5\n",
+        "X\t10\n",
+        "L\t50\n",
+        "C\t100\n",
+        "D\t500\n",
+        "M\t1000\n",
+        "Roman numerals are formed by appending the conversions of decimal place values from highest to lowest. Converting a decimal place value into a Roman numeral has the following rules:\n",
+        "\n",
+        "If the value does not start with 4 or 9, select the symbol of the maximal value that can be subtracted from the input, append that symbol to the result, subtract its value, and convert the remainder to a Roman numeral.\n",
+        "If the value starts with 4 or 9 use the subtractive form representing one symbol subtracted from the following symbol, for example, 4 is 1 (I) less than 5 (V): IV and 9 is 1 (I) less than 10 (X): IX. Only the following subtractive forms are used: 4 (IV), 9 (IX), 40 (XL), 90 (XC), 400 (CD) and 900 (CM).\n",
+        "Only powers of 10 (I, X, C, M) can be appended consecutively at most 3 times to represent multiples of 10. You cannot append 5 (V), 50 (L), or 500 (D) multiple times. If you need to append a symbol 4 times use the subtractive form.\n",
+        "Given an integer, convert it to a Roman numeral.\n",
+        "\n",
+        "1 <= num <= 3999"
+      ],
+      "metadata": {
+        "id": "wczrw6td_M5x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Day 20\n",
+        "class Solution(object):\n",
+        "    def intToRoman(self, num):\n",
+        "        num_map = {1: \"I\", 4: \"IV\",5: \"V\", 9: \"IX\", 10: \"X\", 40: \"XL\", 50: \"L\", 90: \"XC\",\n",
+        "        100: \"C\", 400: \"CD\", 500: \"D\", 900: \"CM\", 1000: \"M\"}\n",
+        "        result = ''\n",
+        "        for i in [1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1]:\n",
+        "            while i <= num:\n",
+        "                result += num_map[i]\n",
+        "                num-=i\n",
+        "        return result\n",
+        "num=int(input(\"Enter a number less than 3999: \"))\n",
+        "solution=Solution()\n",
+        "print(solution.intToRoman(num))"
+      ],
+      "metadata": {
+        "id": "ZqrsINBZ-yOZ",
+        "outputId": "d915b8a4-2f34-4fe1-dec9-3d8e5097cf83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number less than 3999: 3749\n",
+            "MMMDCCXLIX\n"
           ]
         }
       ]
