--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1176,7 +1176,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,6 +1184,135 @@
           "text": [
             "Enter a number less than 3999: 3749\n",
             "MMMDCCXLIX\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 21\n",
+        "###Container With Most Water\n",
+        "You are given an integer array height of length n. There are n vertical lines drawn such that the two endpoints of the ith line are (i, 0) and (i, height[i]).\n",
+        "\n",
+        "Find two lines that together with the x-axis form a container, such that the container contains the most water.\n",
+        "\n",
+        "Return the maximum amount of water a container can store.\n",
+        "\n",
+        "Notice that you may not slant the container.\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- n == height.length\n",
+        "- 2 <= n <= 105\n",
+        "- 0 <= height[i] <= 104"
+      ],
+      "metadata": {
+        "id": "OBvaT36UCYoE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 21\n",
+        "class Solution(object):\n",
+        "    def maxArea(self, height):\n",
+        "        i=0\n",
+        "        j=len(height)-1\n",
+        "        most_water = 0\n",
+        "        while i<j:\n",
+        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "            if height[i]<height[j]:\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j-=1\n",
+        "        return most_water\n",
+        "h = list(map(int,input(\"enter list2: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.maxArea(h))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0AkyK86N_2eM",
+        "outputId": "8baa6ff0-8732-4f0d-eaac-b3d91f6a3bf4"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list2: 1 8 6 2 5 4 8 3 7\n",
+            "49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Day 21\n",
+        "###Longest Valid Parentheses\n",
+        "Given a string containing just the characters '(' and ')', return the length of the longest valid (well-formed) parentheses substring.\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- 0 <= s.length <= 3 * 104\n",
+        "- s[i] is '(', or ')'."
+      ],
+      "metadata": {
+        "id": "BMKJrVWUUnln"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 22\n",
+        "class Solution(object):\n",
+        "    def longestValidParentheses(self, s):\n",
+        "        i=j=0\n",
+        "        max_len = 0\n",
+        "        for ch in s:\n",
+        "            if ch == '(':\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j+=1\n",
+        "            if i==j:\n",
+        "                max_len=max(max_len,j*2)\n",
+        "            elif j>i:\n",
+        "                i=j=0\n",
+        "        i=j=0\n",
+        "        for ch in reversed(s):\n",
+        "            if ch == ')':\n",
+        "                j+=1\n",
+        "            else:\n",
+        "                i+=1\n",
+        "            if i==j:\n",
+        "                max_len=max(max_len,j*2)\n",
+        "            elif i>j:\n",
+        "                i=j=0\n",
+        "        return max_len\n",
+        "s=input(\"Enter input: \")\n",
+        "solution = Solution()\n",
+        "print(solution.longestValidParentheses(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TxtMeVYgUMqv",
+        "outputId": "82d1e675-6818-491a-cc8f-8b8421ad83bc"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter input: ()))()())\n",
+            "4\n"
           ]
         }
       ]
