--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1232,6 +1232,45 @@
         "print(solution.maxArea(h))"
       ],
       "metadata": {
+        "id": "Wv66pp17VMJG",
+        "outputId": "5ff66db6-1281-4fae-9854-f638638b004c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list2: 1 8 6 2 5 4 8 3 7\n",
+            "49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 21\n",
+        "class Solution(object):\n",
+        "    def maxArea(self, height):\n",
+        "        i=0\n",
+        "        j=len(height)-1\n",
+        "        most_water = 0\n",
+        "        while i<j:\n",
+        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "            if height[i]<height[j]:\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j-=1\n",
+        "        return most_water\n",
+        "h = list(map(int,input(\"enter list2: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.maxArea(h))"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -1253,7 +1292,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Day 21\n",
+        "##Day 22\n",
         "###Longest Valid Parentheses\n",
         "Given a string containing just the characters '(' and ')', return the length of the longest valid (well-formed) parentheses substring.\n",
         "\n",
