--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1212,6 +1212,45 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Day 21\n",
+        "class Solution(object):\n",
+        "    def maxArea(self, height):\n",
+        "        i=0\n",
+        "        j=len(height)-1\n",
+        "        most_water = 0\n",
+        "        while i<j:\n",
+        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "            if height[i]<height[j]:\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j-=1\n",
+        "        return most_water\n",
+        "h = list(map(int,input(\"enter list2: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.maxArea(h))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ilIATCHVgdS",
+        "outputId": "1bec1f0a-437f-43b2-d405-7a6bb7a51d8f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list2: 1 8 6 2 5 4 8 3 7\n",
+            "49\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##Day 22\n",
@@ -1274,6 +1313,45 @@
           "text": [
             "Enter input: ()))()())\n",
             "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 21\n",
+        "class Solution(object):\n",
+        "    def maxArea(self, height):\n",
+        "        i=0\n",
+        "        j=len(height)-1\n",
+        "        most_water = 0\n",
+        "        while i<j:\n",
+        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "            if height[i]<height[j]:\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j-=1\n",
+        "        return most_water\n",
+        "h = list(map(int,input(\"enter list2: \").split()))\n",
+        "solution=Solution()\n",
+        "print(solution.maxArea(h))"
+      ],
+      "metadata": {
+        "id": "IwKXla2XV03F",
+        "outputId": "536940c3-333b-49a0-ed5e-b1f9f878ee2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list2: 1 8 6 2 5 4 8 3 7\n",
+            "49\n"
           ]
         }
       ]
